Improve small screen style & prevent break in Forfait MTL

--- a/src/sass/modules/_mtl.scss
+++ b/src/sass/modules/_mtl.scss
@@ -85,5 +85,8 @@
 }
 
 @media screen and (max-width: 640px) {
-  .mtl-item { width: 100%; }
+  .mtl-item {
+    text-align: left;
+    width: 100%;
+  }
 }
